# TTSTRAINER

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
configs/: models.json
configs/internal/: pipeline_defaults.json  quality_pipeline_defaults.json
configs/system/: language_registry.json  vits_mobile_architecture.json
datasets/: metadata.example.csv  texts.example.csv
deployment/: README.md  build_bundle.py
docs/: architecture.md  mobile_runtime.md
scripts/: generate_samples.py  generate_texts.py  run_pipeline.py
src/tts_trainer/: __init__.py  batch_training.py  checkpoints.py  cli.py  config.py  constants.py  experiments.py  export.py  interrupts.py  language_check.py  languages.py  logging_utils.py  manifest.py  model.py  model_registry.py  optional.py  pipeline.py  project_config.py  quality.py  quality_models.py  qwen_teacher.py  sample_generation.py  semantic_quality.py  text.py  text_generation.py  train.py
src/tts_trainer/frontend/: __init__.py  conformance.py  contract.py  espeak.py  (+4 more)
tests/: test_bundle.py  test_core.py  test_deployment_bundle.py  test_experiments.py  test_frontend.py  test_interrupts.py  test_language_check.py  test_logging_utils.py  test_model_registry.py  test_pipeline.py  test_project_config.py  test_quality.py  test_qwen_teacher.py  test_sample_generation.py  test_semantic_quality.py  test_text_generation.py  test_vits.py
training_configs/: add-speaker.example.json  auto-text.example.json  clone.example.json  european.example.json  quality.example.json  resume.example.json  train1.json  train2.json
(+11 files in other folders)
